--- a/app/src/main/res/layout/fragment_keep_write.xml
+++ b/app/src/main/res/layout/fragment_keep_write.xml
@@ -46,80 +46,99 @@
 
         </com.google.android.material.appbar.MaterialToolbar>
 
-        <TextView
-            android:id="@+id/keep_write_title"
-            style="@style/Body1_Semibold"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="21dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="14dp"
-            android:background="@drawable/ic_keep_wirte_back"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:maxLines="2"
-            android:minHeight="48dp"
-            android:paddingStart="16dp"
-            android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/keep_write_appbar"
-            tools:text="[Playlist] 백예린의 수족관" />
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/keep_write_appbar">
 
-        <EditText
-            android:id="@+id/keep_write_memo"
-            style="@style/Body1_Medium"
-            android:layout_width="0dp"
-            android:layout_height="254dp"
-            android:background="@color/white"
-            android:gravity="start"
-            android:hint="@string/keep_write_hint"
-            android:maxLength="200"
-            android:paddingStart="16dp"
-            android:paddingTop="45dp"
-            android:paddingEnd="16dp"
-            android:paddingBottom="45dp"
-            app:layout_constraintEnd_toEndOf="@id/keep_write_title"
-            app:layout_constraintStart_toStartOf="@id/keep_write_title"
-            app:layout_constraintTop_toBottomOf="@id/keep_write_title" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <TextView
-            style="@style/Body2_Bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/keep_write_memo_title"
-            android:textColor="@color/gray_80"
-            app:layout_constraintStart_toStartOf="@id/keep_write_memo"
-            app:layout_constraintTop_toTopOf="@id/keep_write_memo" />
+                <TextView
+                    android:id="@+id/keep_write_title"
+                    style="@style/Body1_Semibold"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="21dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="14dp"
+                    android:background="@drawable/ic_keep_wirte_back"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical"
+                    android:maxLines="2"
+                    android:minHeight="48dp"
+                    android:paddingStart="16dp"
+                    android:textColor="@color/white"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="[Playlist] 백예린의 수족관" />
 
-        <TextView
-            style="@style/Body2_Medium"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="13dp"
-            android:text="@string/keep_write_max_caution"
-            android:textColor="@color/secondary_red"
-            android:visibility="@{viewmodel.countWord == 200 ? View.VISIBLE : View.INVISIBLE}"
-            app:layout_constraintBottom_toBottomOf="@id/keep_write_memo"
-            app:layout_constraintStart_toStartOf="@id/keep_write_memo"
-            app:layout_constraintEnd_toStartOf="@id/keep_write_cnt"/>
+                <EditText
+                    android:id="@+id/keep_write_memo"
+                    style="@style/Body1_Medium"
+                    android:layout_width="0dp"
+                    android:layout_height="254dp"
+                    android:background="@color/white"
+                    android:gravity="start"
+                    android:hint="@string/keep_write_hint"
+                    android:maxLength="200"
+                    android:paddingStart="16dp"
+                    android:paddingTop="45dp"
+                    android:paddingEnd="16dp"
+                    android:paddingBottom="45dp"
+                    app:layout_constraintEnd_toEndOf="@id/keep_write_title"
+                    app:layout_constraintStart_toStartOf="@id/keep_write_title"
+                    app:layout_constraintTop_toBottomOf="@id/keep_write_title" />
+                <TextView
+                    style="@style/Body2_Bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/keep_write_memo_title"
+                    android:textColor="@color/gray_80"
+                    app:layout_constraintStart_toStartOf="@id/keep_write_memo"
+                    app:layout_constraintTop_toTopOf="@id/keep_write_memo" />
 
-        <TextView
-            style="@style/Body2_Medium"
-            android:id="@+id/keep_write_cnt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:text="@{@string/keep_write_count(viewmodel.countWord)}"
-            android:textColor="@{viewmodel.countWord == 200 ? @color/secondary_red  : @color/gray_60}"
-            android:visibility="@{viewmodel.countWord > 0 ? View.VISIBLE : View.INVISIBLE}"
-            app:layout_constraintBottom_toBottomOf="@id/keep_write_memo"
-            app:layout_constraintEnd_toEndOf="@id/keep_write_memo"
-            tools:text="60/200" />
+                <TextView
+                    style="@style/Body2_Medium"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="13dp"
+                    android:text="@string/keep_write_max_caution"
+                    android:textColor="@color/secondary_red"
+                    android:visibility="@{viewmodel.countWord == 200 ? View.VISIBLE : View.INVISIBLE}"
+                    app:layout_constraintBottom_toBottomOf="@id/keep_write_memo"
+                    app:layout_constraintStart_toStartOf="@id/keep_write_memo"
+                    app:layout_constraintEnd_toStartOf="@id/keep_write_cnt"/>
+
+                <TextView
+                    style="@style/Body2_Medium"
+                    android:id="@+id/keep_write_cnt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="@{@string/keep_write_count(viewmodel.countWord)}"
+                    android:textColor="@{viewmodel.countWord == 200 ? @color/secondary_red  : @color/gray_60}"
+                    android:visibility="@{viewmodel.countWord > 0 ? View.VISIBLE : View.INVISIBLE}"
+                    app:layout_constraintBottom_toBottomOf="@id/keep_write_memo"
+                    app:layout_constraintEnd_toEndOf="@id/keep_write_memo"
+                    tools:text="60/200" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    app:layout_constraintTop_toBottomOf="@id/keep_write_memo"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </ScrollView>
 
         <Button
             style="@style/Body1_Semibold"
