--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,72 +12,87 @@
         android:layout_height="match_parent"
         android:background="@color/beige">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/home_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingVertical="4dp"
-            android:paddingStart="9dp"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="RtlSymmetry">
-
-            <ImageView
-                android:id="@+id/home_logo"
-                android:src="@drawable/ic_logo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:tint="@color/primary_green_basic" />
-        </com.google.android.material.appbar.MaterialToolbar>
-
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/home_playlist_order"
+        <ImageView
+            android:id="@+id/home_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="20dp"
-            app:checkedChip="@id/home_recent"
-            app:chipSpacingHorizontal="12dp"
+            android:layout_marginVertical="15dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/ic_logo"
+            app:layout_constraintBottom_toTopOf="@id/home_coordinator"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/home_toolbar"
-            app:selectionRequired="true"
-            app:singleSelection="true">
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/primary_green_basic" />
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/home_recent"
-                style="@style/MyPly.Chip.Home"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/home_order_recent" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/home_popular"
-                style="@style/MyPly.Chip.Home"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/home_order_popular" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/home_preference"
-                style="@style/MyPly.Chip.Home"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/home_order_preference" />
-        </com.google.android.material.chip.ChipGroup>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/home_playlist"
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/home_coordinator"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="12dp"
-            android:clipToPadding="false"
-            android:orientation="vertical"
-            android:overScrollMode="never"
-            android:paddingHorizontal="20dp"
-            android:paddingTop="4dp"
-            android:paddingBottom="16dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/home_playlist_order"
-            tools:listitem="@layout/item_playlist" />
+            app:layout_constraintTop_toBottomOf="@id/home_logo">
+
+            <com.google.android.material.appbar.AppBarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/beige"
+                app:elevation="0dp">
+
+                <com.google.android.material.appbar.MaterialToolbar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:contentInsetStart="20dp"
+                    app:layout_scrollFlags="scroll|enterAlways">
+
+                    <com.google.android.material.chip.ChipGroup
+                        android:id="@+id/home_playlist_order"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:checkedChip="@id/home_recent"
+                        app:chipSpacingHorizontal="12dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/home_logo"
+                        app:selectionRequired="true"
+                        app:singleSelection="true">
+
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/home_recent"
+                            style="@style/MyPly.Chip.Home"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/home_order_recent" />
+
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/home_popular"
+                            style="@style/MyPly.Chip.Home"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/home_order_popular" />
+
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/home_preference"
+                            style="@style/MyPly.Chip.Home"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/home_order_preference" />
+                    </com.google.android.material.chip.ChipGroup>
+                </com.google.android.material.appbar.MaterialToolbar>
+
+            </com.google.android.material.appbar.AppBarLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/home_playlist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:orientation="vertical"
+                android:overScrollMode="never"
+                android:paddingHorizontal="20dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="16dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                tools:listitem="@layout/item_playlist" />
+
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
